Fix filmography: use crew credits for directors, cast for actors
Directors' combined_credits.cast[] contains talk-show guest appearances,
not their films. Switch to crew[] filtered by job=Director for people
whose known_for_department is Directing/Writing/Production.

- Actors still use cast[] (unchanged)
- Directors use crew[] deduped by movie ID
- Min vote threshold lowered to 3 for crew (regional films have few votes)
- Person cache key bumped to v2 to bypass stale cast-only entries

Fixes: Christopher Nolan showing Late Show instead of his films,
       Vipin Das showing 0 titles despite directing Vaazha/Vaazha II

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>